--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-    - assets/database.db
+  # assets:
+  #   - assets/database.db
 
   # To add assets to your application, add an assets section, like this:
   # assets:
